--- a/storefront-child/build_assets/scss/blocks/_header.scss
+++ b/storefront-child/build_assets/scss/blocks/_header.scss
@@ -214,7 +214,7 @@
         &__logo {
             cursor: pointer;
 
-            svg { height: 60px; }
+            img { height: 60px; }
         }
 
         &__right-container {
