--- a/storefront-child/build_assets/scss/blocks/_footer.scss
+++ b/storefront-child/build_assets/scss/blocks/_footer.scss
@@ -77,7 +77,7 @@
                 }
             }
 
-            svg {
+            img {
                 margin-bottom: 13px;
                 height: 80px;
 
