--- a/storefront-child/build_assets/scss/style.scss
+++ b/storefront-child/build_assets/scss/style.scss
@@ -19,6 +19,7 @@
 @import 'blocks/_get-a-quote.scss';
 @import 'blocks/_blogs.scss';
 @import 'blocks/_404.scss';
+@import 'blocks/_cookies.scss';
 @import 'blocks/_title-paragraph.scss';
 @import 'blocks/_legal-categories.scss';
 @import 'custom-dropdown.scss';
