--- a/storefront-child/build_assets/scss/blocks/_hero.scss
+++ b/storefront-child/build_assets/scss/blocks/_hero.scss
@@ -53,7 +53,6 @@
 
 
         &__breadcrumb {
-        
             display: flex;
             margin-bottom: 33px;
             @media (max-width: 1000px) {
@@ -121,6 +120,11 @@
 
             p {
                width: 90%;
+               padding-bottom: 20px;
+
+               &:last-child {
+                   padding-bottom: 0;
+               }
 
                 @media (max-width: 1000px) {
                     width: 100%;
@@ -306,6 +310,7 @@
     &.child-pages {
         height: 590px;
         margin-bottom: 198px;
+        
         @media (max-width: 1040px) {
             height: fit-content;
         }
