--- a/storefront-child/build_assets/scss/blocks/_text-image.scss
+++ b/storefront-child/build_assets/scss/blocks/_text-image.scss
@@ -4,6 +4,7 @@
     padding: 48px 40px 48px 40px;
     display: flex;
     column-gap: 32px;
+    opacity: 0;
     @media (max-width: $desktop) {
         max-width: 100%;
         padding: 48px 32px 48px 32px;
