--- a/storefront-child/build_assets/scss/style.scss
+++ b/storefront-child/build_assets/scss/style.scss
@@ -25,6 +25,7 @@
 @import 'blocks/_title-paragraph.scss';
 @import 'blocks/_legal-categories.scss';
 @import 'custom-dropdown.scss';
+@import 'blocks/global-featured-products.scss';
 
 
 h1 {
