--- a/storefront-child/build_assets/scss/blocks/_single-product.scss
+++ b/storefront-child/build_assets/scss/blocks/_single-product.scss
@@ -4,10 +4,9 @@
 .product-container{
     width: 1320px;
 }
-
 .product-image{
     max-width: 627px;
-    height: 916px;
+    max-height: 916px;
     &__feature{
         height: 736px;
         width: 100%;
@@ -19,7 +18,7 @@
     &__feature-image{
         height: 100%;
         img{
-            width: auto;
+            width: 100%;
             height: 100%;
             display: block;
             object-fit: cover;
@@ -537,4 +536,63 @@
     width: 100%;
     width: 992px;
     margin-bottom: 20px;
+}
+
+.woocommerce-checkout .StripeElement {
+    width: 100%;
+}
+
+@media only screen and (max-width: 1200px){
+    .product-image__feature{
+        width: 460px;
+    }
+    // .product-image__controls{
+    //     width: 460px;
+    // }
+}
+
+@media only screen and (max-width: 930px){
+	.product{
+        display: flex;
+        flex-direction: column;
+        margin: 0 auto;
+        align-items: center;
+    }
+    .product-image__feature{
+        width: 552px;
+        height: 400px;
+        margin: 0px auto 14px;
+    }
+    .product-image__controls{
+        width: 100%;
+    }
+    .product-image__controls-item{
+        width: 76px !important;
+        height: 80px !important;
+    }
+    .product-image{
+        max-width: 100%;
+        align-items: center;
+    }
+    .product-image__controls .slick-next, .product-image__controls .slick-prev {
+        width: 12px;
+        top: 21%;
+        height: 16px;
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-align: center;
+        align-items: center;
+        max-width: inherit;
+        padding: 0;
+    }
+}
+@media only screen and (max-width: 665px){
+    .product-image__feature{
+        width: 340px;
+        height: 400px;
+    }
+    .product-image__controls-item{
+        width: 76px;
+        height: 80px;
+    }
 }
