--- a/storefront-child/build_assets/scss/style.scss
+++ b/storefront-child/build_assets/scss/style.scss
@@ -26,6 +26,7 @@
 @import 'blocks/_legal-categories.scss';
 @import 'custom-dropdown.scss';
 @import 'blocks/global-featured-products.scss';
+@import 'blocks/checkout.scss';
 
 
 h1 {
